--- a/css copy/customization-classes.css
+++ b/css copy/customization-classes.css
@@ -116,7 +116,7 @@ CUSTOMIZATION CLASSES
     color: #636363;
 }
 .color-yellow {
-    color: #FFF;
+    color: #FEC900;
 }
 .color-green {
     color: #00fe5a;
