--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ body {
 
 .navbar-fixed-top .active a {
     background: #0f0f0f !important;
-    color: #a99ba3 !important;
+    color: #b1a6a6!important;
 }
 .navbar-fixed-top .active a:hover {
     color: #0f0f0f !important;
@@ -119,7 +119,7 @@ body {
 }
 
 .navbar.navbar-fixed-top.fixed-theme a:hover {
-    color: #FEC900 !important;
+    color: #b1a6a6 !important;
 }
 
 .navbar.navbar-fixed-top.fixed-theme .active a {
@@ -267,10 +267,13 @@ body {
 }
 
 #intro .title-intro {
-    font-size: 140px;
-    font-weight: 700;
+    font-size: 153px;
+    font-weight: 500;
     text-align: left;
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
+    font-family: proxima-nova, sans-serif;
+    bottom-margin:0px;
+  
 }
 
 
@@ -280,8 +283,8 @@ content: '';
 width: 300px;
 display: block;
 /* background: #4c5152; */
-height: 6px;
-margin: 5px 0px 0px 0px;
+/* height: 6px; */
+/* margin: 5px 0px 0px 0px; */
 line-height: 1.1;
 }
 
@@ -297,12 +300,13 @@ line-height: 1.1;
 } */
 
 #intro .title-intro-2 {
-    font-size: 30px;
+    font-size: 35px;
 }
 
 #intro p {
     margin: 0 0 15px 0;
     letter-spacing: 1px;
+    font-family: proxima-nova, sans-serif;
 }
 
 .simple-line {
@@ -357,6 +361,7 @@ line-height: 1.1;
 #about {
     background: url(../images/backgrounds/bg-1.jpg);
     background-attachment: fixed !important;
+    background-color: white !important;
     background-size: cover !important;
     position: relative;
     overflow: hidden !important;
@@ -371,7 +376,7 @@ line-height: 1.1;
     -webkit-transition-timing-function: ease-in;
     -o-transition-timing-function: ease-in;
     width: 100%;
-    min-height: 800px;
+    min-height: 550px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -392,8 +397,8 @@ line-height: 1.1;
 
 @-moz-document url-prefix() {
     #about .about-wrapper {
-        padding-top: 65px !important;
-        padding-bottom: 80px !important;
+        padding-top: 35px !important;
+        padding-bottom: 40px !important;
     }
 }
 
@@ -409,22 +414,26 @@ line-height: 1.1;
     /* background: rgba(15, 15, 15, 0.7); */
     background:  rgba(10, 10, 10, 0.6);
    
-
 }
 
 #about .title {
-    font-size: 70px;
-    font-family: 'Roboto', sans-serif;
+    font-size: 55px;
+    line-height: 0.8;
+
+    /* font-family: 'Roboto', sans-serif; */
+    font-family: proxima-nova, sans-serif;
 }
 
 #about .title::after {
     content: '';
-    width: 300px;
+    width: 280px;
     display: block;
     background: #acb2b3;
-    height: 6px;
+    height: 2px;
     margin: 5px 0px 0px 0px;
     line-height: 1.1;
+
+    margin-top:10px;
 }
 
 #about p {
@@ -511,7 +520,7 @@ line-height: 1.1;
 
 section#portfolio {
     background: #020202;
-    min-height: 900px;
+    min-height: 800px;
     padding-bottom: 100px;
     position: relative;
     z-index: 11 !important;
@@ -528,7 +537,7 @@ section#portfolio {
     display: block;
     background: #0f0f0f;
     height: 6px;
-    margin: 30px 0px 0px 0px;
+    margin: 10px 0px 0px 0px;
     line-height: 1.1;
 }
 
@@ -575,31 +584,32 @@ section#portfolio {
     height: 100%;
     position: absolute;
     z-index: 1;
-    background: #0f0f0f;
-    border: 25px solid rgb(134, 134, 133);
+    background: #ffffff;
+    border: 20px solid rgb(134, 134, 133);
     text-align: center;
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
+    padding: 25px;
 }
 
 .gallery .item-title {
-    font-weight: bold;
+    /* font-weight: bold; */
     font-size: 20px;
-    color: #fff;
+    color: #000;
     position: relative;
     top: 30%; 
 }
 
 
 .gallery .item-title a{
-    color: white;
+    color:  #000;
     text-decoration: none;
 }
 
 
 
 .gallery .item-title a:hover { 
-    color: yellow;
+    color: rgb(117, 117, 115);
 }
 
 /* 
@@ -631,9 +641,9 @@ section#portfolio {
     display: inline-block;
     line-height: normal;
     letter-spacing: 0.5px;
-    padding: 10px 30px 10px 30px;
+    padding: 5px 30px 5x 30px;
     height: auto;
-    border: 3px solid #fff;
+    border: 2px solid #fff;
     vertical-align: middle;
     -webkit-appearance: none;
     background-color: #fff;
@@ -654,14 +664,15 @@ section#portfolio {
     box-shadow: none;
     outline: none !important;
     background: #0f0f0f;
-    color: #FEC900;
+    color:rgb(134, 134, 133);
+   
 }
 
 .portfolio-filter button.btn:hover {
     box-shadow: none;
     outline: none !important;
     background: #0f0f0f;
-    color: #FEC900;
+    color: rgb(134, 134, 133);
 }
 
 /*
@@ -1273,3 +1284,6 @@ footer .footer-content a:hover {
     margin-left: 21px;
     border-right: 27px solid #000;
 }
+
+    .btn
+            { border-radius: 0px;}
